// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot for App component 1`] = `
<div
  className="App"
>
  <ul
    className="nav justify-content-center container bg-light mt-2"
  >
    <li
      className="nav-item m-auto"
    >
      <a
        className="nav-link"
        href="/"
        onClick={[Function]}
      >
        CUSTOMER TABLE
      </a>
    </li>
    <li
      className="nav-item m-auto"
    >
      <a
        className="nav-link"
        href="/price-graph"
        onClick={[Function]}
      >
        PRICE GRAPH
      </a>
    </li>
    <li
      className="nav-item m-auto"
    >
      <a
        className="nav-link"
        href="/order-graph"
        onClick={[Function]}
      >
        ORDER GRAPH
      </a>
    </li>
  </ul>
  <div>
    <div
      className="container mt-3"
    >
      <div>
        <table
          className="table table-striped table-secondary"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                ID
              </th>
              <th
                scope="col"
              >
                First Name
              </th>
              <th
                scope="col"
              >
                Last Name
              </th>
              <th
                scope="col"
              >
                Email
              </th>
              <th
                scope="col"
              >
                Created
              </th>
              <th
                scope="col"
              >
                Orders
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                0b62a22a-51b5-4594-921a-e25a12ece0b8
              </td>
              <td>
                Dion
              </td>
              <td>
                Donnelly
              </td>
              <td>
                Carmella_Willms@gmail.com
              </td>
              <td>
                2020-04-23T21:35:28.635Z
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                0fcbff30-5e8d-4ffb-949e-c7f1301c71e1
              </td>
              <td>
                Diego
              </td>
              <td>
                Hahn
              </td>
              <td>
                Fatima_Larson@yahoo.com
              </td>
              <td>
                2020-04-02T04:50:54.591Z
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <td>
                621777e6-e862-474b-a2db-5812d848cedc
              </td>
              <td>
                Reinhold
              </td>
              <td>
                Ondricka
              </td>
              <td>
                Gus17@yahoo.com
              </td>
              <td>
                2020-04-04T03:29:24.579Z
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                2b6bb67e-fb90-4eb6-af7b-e85945fe40ad
              </td>
              <td>
                Mary
              </td>
              <td>
                Bernhard
              </td>
              <td>
                Layne67@gmail.com
              </td>
              <td>
                2020-04-26T05:05:10.164Z
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <td>
                6c51fb63-eae9-4b72-b365-7db31612a543
              </td>
              <td>
                Napoleon
              </td>
              <td>
                Beahan
              </td>
              <td>
                Nia.Streich17@yahoo.com
              </td>
              <td>
                2020-04-09T01:39:29.883Z
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <td>
                72598b8a-33ab-48ce-8539-f4e2d3fd7ae5
              </td>
              <td>
                Joseph
              </td>
              <td>
                Jacobs
              </td>
              <td>
                Rozella22@yahoo.com
              </td>
              <td>
                2020-04-22T22:43:24.254Z
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <td>
                eea3a83f-99c7-4434-b3f5-e52679f1f682
              </td>
              <td>
                Chase
              </td>
              <td>
                Ryan
              </td>
              <td>
                Arden20@hotmail.com
              </td>
              <td>
                2020-04-08T08:44:51.927Z
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <td>
                07ae0e34-9dac-4c32-bf03-39f8e79f5f86
              </td>
              <td>
                Doyle
              </td>
              <td>
                Grant
              </td>
              <td>
                Ruthie_Glover30@hotmail.com
              </td>
              <td>
                2020-04-26T10:47:51.802Z
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <td>
                21419e19-48c6-420a-af0f-a501b5cbbef4
              </td>
              <td>
                Dolly
              </td>
              <td>
                Schmeler
              </td>
              <td>
                Lori.Roob4@gmail.com
              </td>
              <td>
                2020-04-14T04:10:23.744Z
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                d046c38d-4b7c-463e-b941-80ac0d43084c
              </td>
              <td>
                Maritza
              </td>
              <td>
                Kunde
              </td>
              <td>
                Demetris_Tromp@hotmail.com
              </td>
              <td>
                2020-04-20T20:27:36.295Z
              </td>
              <td>
                3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav>
        <ul
          className="pagination"
        >
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              1
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              2
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              3
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              4
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              5
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              6
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              7
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              8
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              9
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              10
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`snapshot for Home component 1`] = `
<div>
  <div
    className="container mt-3"
  >
    <div>
      <table
        className="table table-striped table-secondary"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              ID
            </th>
            <th
              scope="col"
            >
              First Name
            </th>
            <th
              scope="col"
            >
              Last Name
            </th>
            <th
              scope="col"
            >
              Email
            </th>
            <th
              scope="col"
            >
              Created
            </th>
            <th
              scope="col"
            >
              Orders
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              0b62a22a-51b5-4594-921a-e25a12ece0b8
            </td>
            <td>
              Dion
            </td>
            <td>
              Donnelly
            </td>
            <td>
              Carmella_Willms@gmail.com
            </td>
            <td>
              2020-04-23T21:35:28.635Z
            </td>
            <td>
              2
            </td>
          </tr>
          <tr>
            <td>
              0fcbff30-5e8d-4ffb-949e-c7f1301c71e1
            </td>
            <td>
              Diego
            </td>
            <td>
              Hahn
            </td>
            <td>
              Fatima_Larson@yahoo.com
            </td>
            <td>
              2020-04-02T04:50:54.591Z
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              621777e6-e862-474b-a2db-5812d848cedc
            </td>
            <td>
              Reinhold
            </td>
            <td>
              Ondricka
            </td>
            <td>
              Gus17@yahoo.com
            </td>
            <td>
              2020-04-04T03:29:24.579Z
            </td>
            <td>
              2
            </td>
          </tr>
          <tr>
            <td>
              2b6bb67e-fb90-4eb6-af7b-e85945fe40ad
            </td>
            <td>
              Mary
            </td>
            <td>
              Bernhard
            </td>
            <td>
              Layne67@gmail.com
            </td>
            <td>
              2020-04-26T05:05:10.164Z
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              6c51fb63-eae9-4b72-b365-7db31612a543
            </td>
            <td>
              Napoleon
            </td>
            <td>
              Beahan
            </td>
            <td>
              Nia.Streich17@yahoo.com
            </td>
            <td>
              2020-04-09T01:39:29.883Z
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              72598b8a-33ab-48ce-8539-f4e2d3fd7ae5
            </td>
            <td>
              Joseph
            </td>
            <td>
              Jacobs
            </td>
            <td>
              Rozella22@yahoo.com
            </td>
            <td>
              2020-04-22T22:43:24.254Z
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              eea3a83f-99c7-4434-b3f5-e52679f1f682
            </td>
            <td>
              Chase
            </td>
            <td>
              Ryan
            </td>
            <td>
              Arden20@hotmail.com
            </td>
            <td>
              2020-04-08T08:44:51.927Z
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              07ae0e34-9dac-4c32-bf03-39f8e79f5f86
            </td>
            <td>
              Doyle
            </td>
            <td>
              Grant
            </td>
            <td>
              Ruthie_Glover30@hotmail.com
            </td>
            <td>
              2020-04-26T10:47:51.802Z
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              21419e19-48c6-420a-af0f-a501b5cbbef4
            </td>
            <td>
              Dolly
            </td>
            <td>
              Schmeler
            </td>
            <td>
              Lori.Roob4@gmail.com
            </td>
            <td>
              2020-04-14T04:10:23.744Z
            </td>
            <td>
              2
            </td>
          </tr>
          <tr>
            <td>
              d046c38d-4b7c-463e-b941-80ac0d43084c
            </td>
            <td>
              Maritza
            </td>
            <td>
              Kunde
            </td>
            <td>
              Demetris_Tromp@hotmail.com
            </td>
            <td>
              2020-04-20T20:27:36.295Z
            </td>
            <td>
              3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav>
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            1
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            2
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            3
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            4
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            5
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            6
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            7
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            8
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            9
          </div>
        </li>
        <li
          className="page-item"
        >
          <div
            className="page-link"
            onClick={[Function]}
          >
            10
          </div>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`snapshot for Routes component 1`] = `
Array [
  <ul
    className="nav justify-content-center container bg-light mt-2"
  >
    <li
      className="nav-item m-auto"
    >
      <a
        className="nav-link"
        href="/"
        onClick={[Function]}
      >
        CUSTOMER TABLE
      </a>
    </li>
    <li
      className="nav-item m-auto"
    >
      <a
        className="nav-link"
        href="/price-graph"
        onClick={[Function]}
      >
        PRICE GRAPH
      </a>
    </li>
    <li
      className="nav-item m-auto"
    >
      <a
        className="nav-link"
        href="/order-graph"
        onClick={[Function]}
      >
        ORDER GRAPH
      </a>
    </li>
  </ul>,
  <div>
    <div
      className="container mt-3"
    >
      <div>
        <table
          className="table table-striped table-secondary"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                ID
              </th>
              <th
                scope="col"
              >
                First Name
              </th>
              <th
                scope="col"
              >
                Last Name
              </th>
              <th
                scope="col"
              >
                Email
              </th>
              <th
                scope="col"
              >
                Created
              </th>
              <th
                scope="col"
              >
                Orders
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                0b62a22a-51b5-4594-921a-e25a12ece0b8
              </td>
              <td>
                Dion
              </td>
              <td>
                Donnelly
              </td>
              <td>
                Carmella_Willms@gmail.com
              </td>
              <td>
                2020-04-23T21:35:28.635Z
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                0fcbff30-5e8d-4ffb-949e-c7f1301c71e1
              </td>
              <td>
                Diego
              </td>
              <td>
                Hahn
              </td>
              <td>
                Fatima_Larson@yahoo.com
              </td>
              <td>
                2020-04-02T04:50:54.591Z
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <td>
                621777e6-e862-474b-a2db-5812d848cedc
              </td>
              <td>
                Reinhold
              </td>
              <td>
                Ondricka
              </td>
              <td>
                Gus17@yahoo.com
              </td>
              <td>
                2020-04-04T03:29:24.579Z
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                2b6bb67e-fb90-4eb6-af7b-e85945fe40ad
              </td>
              <td>
                Mary
              </td>
              <td>
                Bernhard
              </td>
              <td>
                Layne67@gmail.com
              </td>
              <td>
                2020-04-26T05:05:10.164Z
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <td>
                6c51fb63-eae9-4b72-b365-7db31612a543
              </td>
              <td>
                Napoleon
              </td>
              <td>
                Beahan
              </td>
              <td>
                Nia.Streich17@yahoo.com
              </td>
              <td>
                2020-04-09T01:39:29.883Z
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <td>
                72598b8a-33ab-48ce-8539-f4e2d3fd7ae5
              </td>
              <td>
                Joseph
              </td>
              <td>
                Jacobs
              </td>
              <td>
                Rozella22@yahoo.com
              </td>
              <td>
                2020-04-22T22:43:24.254Z
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <td>
                eea3a83f-99c7-4434-b3f5-e52679f1f682
              </td>
              <td>
                Chase
              </td>
              <td>
                Ryan
              </td>
              <td>
                Arden20@hotmail.com
              </td>
              <td>
                2020-04-08T08:44:51.927Z
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <td>
                07ae0e34-9dac-4c32-bf03-39f8e79f5f86
              </td>
              <td>
                Doyle
              </td>
              <td>
                Grant
              </td>
              <td>
                Ruthie_Glover30@hotmail.com
              </td>
              <td>
                2020-04-26T10:47:51.802Z
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <td>
                21419e19-48c6-420a-af0f-a501b5cbbef4
              </td>
              <td>
                Dolly
              </td>
              <td>
                Schmeler
              </td>
              <td>
                Lori.Roob4@gmail.com
              </td>
              <td>
                2020-04-14T04:10:23.744Z
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                d046c38d-4b7c-463e-b941-80ac0d43084c
              </td>
              <td>
                Maritza
              </td>
              <td>
                Kunde
              </td>
              <td>
                Demetris_Tromp@hotmail.com
              </td>
              <td>
                2020-04-20T20:27:36.295Z
              </td>
              <td>
                3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav>
        <ul
          className="pagination"
        >
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              1
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              2
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              3
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              4
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              5
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              6
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              7
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              8
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              9
            </div>
          </li>
          <li
            className="page-item"
          >
            <div
              className="page-link"
              onClick={[Function]}
            >
              10
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </div>,
]
`;

exports[`snapshot for Table component 1`] = `
<div
  className="container mt-3"
>
  <div>
    <table
      className="table table-striped table-secondary"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            ID
          </th>
          <th
            scope="col"
          >
            First Name
          </th>
          <th
            scope="col"
          >
            Last Name
          </th>
          <th
            scope="col"
          >
            Email
          </th>
          <th
            scope="col"
          >
            Created
          </th>
          <th
            scope="col"
          >
            Orders
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0b62a22a-51b5-4594-921a-e25a12ece0b8
          </td>
          <td>
            Dion
          </td>
          <td>
            Donnelly
          </td>
          <td>
            Carmella_Willms@gmail.com
          </td>
          <td>
            2020-04-23T21:35:28.635Z
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            0fcbff30-5e8d-4ffb-949e-c7f1301c71e1
          </td>
          <td>
            Diego
          </td>
          <td>
            Hahn
          </td>
          <td>
            Fatima_Larson@yahoo.com
          </td>
          <td>
            2020-04-02T04:50:54.591Z
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            621777e6-e862-474b-a2db-5812d848cedc
          </td>
          <td>
            Reinhold
          </td>
          <td>
            Ondricka
          </td>
          <td>
            Gus17@yahoo.com
          </td>
          <td>
            2020-04-04T03:29:24.579Z
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            2b6bb67e-fb90-4eb6-af7b-e85945fe40ad
          </td>
          <td>
            Mary
          </td>
          <td>
            Bernhard
          </td>
          <td>
            Layne67@gmail.com
          </td>
          <td>
            2020-04-26T05:05:10.164Z
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            6c51fb63-eae9-4b72-b365-7db31612a543
          </td>
          <td>
            Napoleon
          </td>
          <td>
            Beahan
          </td>
          <td>
            Nia.Streich17@yahoo.com
          </td>
          <td>
            2020-04-09T01:39:29.883Z
          </td>
          <td>
            1
          </td>
        </tr>
        <tr>
          <td>
            72598b8a-33ab-48ce-8539-f4e2d3fd7ae5
          </td>
          <td>
            Joseph
          </td>
          <td>
            Jacobs
          </td>
          <td>
            Rozella22@yahoo.com
          </td>
          <td>
            2020-04-22T22:43:24.254Z
          </td>
          <td>
            1
          </td>
        </tr>
        <tr>
          <td>
            eea3a83f-99c7-4434-b3f5-e52679f1f682
          </td>
          <td>
            Chase
          </td>
          <td>
            Ryan
          </td>
          <td>
            Arden20@hotmail.com
          </td>
          <td>
            2020-04-08T08:44:51.927Z
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            07ae0e34-9dac-4c32-bf03-39f8e79f5f86
          </td>
          <td>
            Doyle
          </td>
          <td>
            Grant
          </td>
          <td>
            Ruthie_Glover30@hotmail.com
          </td>
          <td>
            2020-04-26T10:47:51.802Z
          </td>
          <td>
            1
          </td>
        </tr>
        <tr>
          <td>
            21419e19-48c6-420a-af0f-a501b5cbbef4
          </td>
          <td>
            Dolly
          </td>
          <td>
            Schmeler
          </td>
          <td>
            Lori.Roob4@gmail.com
          </td>
          <td>
            2020-04-14T04:10:23.744Z
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            d046c38d-4b7c-463e-b941-80ac0d43084c
          </td>
          <td>
            Maritza
          </td>
          <td>
            Kunde
          </td>
          <td>
            Demetris_Tromp@hotmail.com
          </td>
          <td>
            2020-04-20T20:27:36.295Z
          </td>
          <td>
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav>
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          1
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          2
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          3
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          4
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          5
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          6
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          7
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          8
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          9
        </div>
      </li>
      <li
        className="page-item"
      >
        <div
          className="page-link"
          onClick={[Function]}
        >
          10
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`snapshot for customerTable component 1`] = `
<h1>
  Loading
</h1>
`;

exports[`snapshot for navbar component 1`] = `
<ul
  className="nav justify-content-center container bg-light mt-2"
>
  <li
    className="nav-item m-auto"
  >
    <a
      className="nav-link"
      href="/"
      onClick={[Function]}
    >
      CUSTOMER TABLE
    </a>
  </li>
  <li
    className="nav-item m-auto"
  >
    <a
      className="nav-link"
      href="/price-graph"
      onClick={[Function]}
    >
      PRICE GRAPH
    </a>
  </li>
  <li
    className="nav-item m-auto"
  >
    <a
      className="nav-link"
      href="/order-graph"
      onClick={[Function]}
    >
      ORDER GRAPH
    </a>
  </li>
</ul>
`;

exports[`snapshot for pagination component 1`] = `
<nav>
  <ul
    className="pagination"
  />
</nav>
`;
